# open-chat-memory

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.streamlit/: config.toml
.trae/rules/: git-commit-message.md
docs/: Index.md  adding-parsers.md  analysis-scripts-overview.md  analysis-tools-index.md  cli.md  eda-analysis-guide.md  environment-setup.md  llm-analysis-guide.md
docs/examples/: README.md  eda_analysis.ipynb  eda_analysis.py  llm_conversation_analysis.ipynb  llm_conversation_analysis.py
docs/examples/claude-export-sample/: conversations.json  projects.json  users.json
docs/examples/openai-export-sample/: conversations.json  users.json
docs/examples/sample_data/: chatgpt_conversations.json  messages_sample.jsonl
openchatmemory/: __init__.py  cli.py
openchatmemory/memory/: __init__.py  mem0.py
openchatmemory/parsers/: __init__.py  base.py  chatgpt.py  claude.py  gemini.py
openchatmemory/persistence/: __init__.py  postgres.py
openchatmemory/schemas/: __init__.py
tests/: conftest.py  test_cli.py  test_cli_smoke.py  test_gemini.py  test_input_resolution.py  test_mem0.py  test_parsers.py  test_public_examples.py
