
[project]
name = "openchatmemory"
version = "0.1.1rc1"
description = "Reclaim your AI chat history: A privacy-preserving ETL pipeline to extract insights, analyze patterns, and build private memory stores from your ChatGPT and Claude exports."
authors = [{ name = "Ndamulelo Nemakhavhani", email = "hello@ndamulelo.co.za" }]
maintainers = [{ name = "Ndamulelo Nemakhavhani", email = "hello@ndamulelo.co.za" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "MIT" }
keywords = [
  "chatgpt",
  "claude",
  "conversations",
  "memories",
  "ETL",
  "postgres",
  "ai",
  "chat-export",
  "mem0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Topic :: Database",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
  "pandas>=2.2.3,<3.0.0",
  "pydantic>=2.11.4,<3.0.0",
  "pydantic-settings>=2.9.1,<3.0.0",
  "loguru>=0.7.3,<0.8.0"
]

[project.optional-dependencies]
db = ["psycopg[binary]>=3.2.1,<4.0.0", "sqlalchemy>=2.0.30,<3.0.0"]
mem0 = ["mem0ai>=0.1.95,<0.2.0"]
app = [
  "streamlit>=1.28.0",
  "plotly>=5.18.0",
  "matplotlib>=3.10.6,<4.0.0",
  "seaborn>=0.13.2,<0.14.0",
  "wordcloud>=1.9.4,<2.0.0",
  "bertopic[visualization]>=0.17.3,<0.18.0",
  "scikit-learn>=1.7.2,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/ndamulelonemakh/open-chat-memory"
Repository = "https://github.com/ndamulelonemakh/open-chat-memory"
Issues = "https://github.com/ndamulelonemakh/open-chat-memory/issues"
Changelog = "https://github.com/ndamulelonemakh/open-chat-memory/blob/main/CHANGELOG.md"
Documentation = "https://github.com/ndamulelonemakh/open-chat-memory#readme"

[project.scripts]
ocmem = "openchatmemory.cli:main"
openchatmemory = "openchatmemory.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["openchatmemory*"]


[tool.poetry.group.dev.dependencies]
ruff = "^0.13.3"
pre-commit = "^3.8.0"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]
ignore = [
  "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["pandas.*", "mem0.*", "loguru.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
